[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scenes/ui/Action.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scripts/ui/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Maniac.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Maniac-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/materials/ui/flat_style.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/materials/ui/flat_style_bg.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/scripts/ui/Health.gd" type="Script" id=7]
[ext_resource path="res://assets/scripts/ui/Experience.gd" type="Script" id=8]
[ext_resource path="res://default_theme.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=3]
size = 72
extra_spacing_char = 2
extra_spacing_space = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 72
use_mipmaps = true
extra_spacing_char = 2
extra_spacing_space = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 72
use_mipmaps = true
extra_spacing_char = 2
extra_spacing_space = 4
font_data = ExtResource( 4 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
action = ExtResource( 1 )

[node name="ZoneName" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 800, 300 )
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 400, 150 )
theme = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.25098 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "Zone Name"
align = 1
valign = 1
uppercase = true

[node name="Tween" type="Tween" parent="."]

[node name="ActionBar" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 14.0
rect_min_size = Vector2( 400, 32 )
rect_scale = Vector2( 0.75, 0.75 )
custom_constants/separation = -16
alignment = 1

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.166667
custom_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Health" type="Control" parent="TopBar"]
margin_left = 18.0
margin_right = 218.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 30 )
rect_pivot_offset = Vector2( 100, 15 )
script = ExtResource( 7 )

[node name="Shadow" type="ColorRect" parent="TopBar/Health"]
margin_left = 3.0
margin_top = 18.0
margin_right = 203.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 20 )
rect_pivot_offset = Vector2( 100, 10 )
color = Color( 0, 0, 0, 0.25098 )

[node name="Bar" type="ProgressBar" parent="TopBar/Health"]
self_modulate = Color( 0.501961, 0.752941, 0.12549, 1 )
margin_top = 15.0
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 20 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
custom_styles/fg = ExtResource( 5 )
custom_styles/bg = ExtResource( 6 )
max_value = 10.0
value = 10.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthLabel" type="HBoxContainer" parent="TopBar/Health"]
anchor_top = -0.18
anchor_right = 1.0
anchor_bottom = 1.26
margin_top = 2.0
margin_right = 800.0
margin_bottom = 77.0
rect_min_size = Vector2( 1000, 36 )
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 32 )
custom_constants/separation = -7
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentHealth" type="Label" parent="TopBar/Health/HealthLabel"]
margin_left = 411.0
margin_right = 475.0
margin_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 32 )
rect_pivot_offset = Vector2( 32, 32 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.25098 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
autowrap = true

[node name="Divide" type="Label" parent="TopBar/Health/HealthLabel"]
margin_left = 468.0
margin_right = 532.0
margin_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 32 )
rect_pivot_offset = Vector2( 32, 0 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.25098 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "||1||||"
align = 1

[node name="MaxHealth" type="Label" parent="TopBar/Health/HealthLabel"]
margin_left = 525.0
margin_right = 589.0
margin_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 32 )
rect_pivot_offset = Vector2( 32, 32 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.25098 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
autowrap = true

[node name="Tween" type="Tween" parent="TopBar/Health"]

[node name="Experience" type="Control" parent="TopBar"]
margin_left = 282.0
margin_right = 382.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
script = ExtResource( 8 )

[node name="Container" type="HBoxContainer" parent="TopBar/Experience"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 15.0
rect_scale = Vector2( 0.8, 0.8 )
alignment = 1

[node name="Fix" type="Control" parent="TopBar/Experience/Container"]
margin_left = 3.0
margin_right = 33.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )

[node name="Shadow" type="ColorRect" parent="TopBar/Experience/Container/Fix"]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 33.0
rect_min_size = Vector2( 60, 30 )
rect_rotation = -90.0
rect_pivot_offset = Vector2( 30, 30 )
color = Color( 0, 0, 0, 0.25098 )

[node name="Bar" type="ProgressBar" parent="TopBar/Experience/Container/Fix"]
self_modulate = Color( 0.501961, 0.752941, 0.12549, 1 )
anchor_left = 6.35783e-08
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.90735e-06
margin_bottom = -30.0
rect_min_size = Vector2( 60, 30 )
rect_rotation = -90.0
rect_pivot_offset = Vector2( 30, 30 )
custom_styles/fg = ExtResource( 5 )
custom_styles/bg = ExtResource( 6 )
max_value = 10.0
value = 5.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="TopBar/Experience/Container"]
margin_left = 37.0
margin_right = 97.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="CurrentLevel" type="Label" parent="TopBar/Experience/Container/Control"]
anchor_left = -1.13333
anchor_right = -0.067
anchor_bottom = 1.0
margin_left = 68.0
margin_right = 68.02
margin_bottom = 87.0
grow_vertical = 2
rect_min_size = Vector2( 64, 32 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 32, 32 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.25098 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="TopBar/Experience"]
